# arcstore

./: .gitignore  README.md  pyproject.toml
scripts/: koala_storage_smoke.py  koala_storage_smoke_watchdog.sh
src/: _env.py  arcstore.py  contents.py  formats.py  io.py  s3cli.py  staging.py  sync.py  uploads.py  workspace.py
src/arcstore/: __init__.py  _env.py  discovery.py  io.py  location.py  logtee.py  run.py  s3cli.py  staging.py  uploads.py  webdataset.py
src/arcstore/torch/: __init__.py  accelerate.py  dcp.py  safetensors.py  scatter.py  wds.py
src/checkpoint/: __init__.py  registry.py
src/data/: __init__.py  access.py  loader.py  registry.py  shuffle.py  view.py
src/torch/: __init__.py  _ckpt_common.py  accelerate_ckpt.py  dcp.py  load.py  manager.py  observability.py  runtime.py  safetensors.py  scatter.py  synthetic.py  wds.py
src/torch/backends/: __init__.py  mosaic_backend.py  scatter_backend.py  synthetic_backend.py  wds_backend.py
src/torch/ckpt_backends/: __init__.py  accelerate_backend.py  blob_backend.py  full_state_backend.py  safetensors_backend.py
src/torch/integrations/: __init__.py  accelerate.py
tests/: conftest.py  test_checkpoint_dispatch.py  test_contents.py  test_data_access.py  test_data_dispatch.py  test_discovery.py  test_env.py  test_formats.py  test_io.py  test_location.py  test_logtee.py  test_run.py  test_shuffle.py  test_staging.py  test_sync.py  test_uploads.py  test_workspace.py  test_writers.py
tests/test_torch/: test_accelerate_state.py  test_checkpoint_accelerate.py  test_checkpoint_blob.py  test_checkpoint_full_state.py  test_checkpoint_safetensors.py  test_ckpt_common.py  test_dcp_paths.py  test_manager_discovery.py  test_observability.py  test_open_dataset_scatter.py  test_open_dataset_wds.py  test_runtime.py  test_safetensors_local.py  test_safetensors_save.py  test_scatter_local.py  test_synthetic.py  test_wds_urls.py
